--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "animate.css": "^3.7.2",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.4.5",
+    "js-cookie": "^2.2.1",
     "node-sass": "^4.12.0",
+    "nprogress": "^0.2.0",
     "sass-loader": "^7.1.0",
     "svg-sprite-loader": "^4.1.6",
     "vue": "^2.6.10",
