--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.1",
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "element-ui": "^2.4.5",
+    "element-ui": "^2.12",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.12.0",
     "nprogress": "^0.2.0",
@@ -20,7 +21,9 @@
     "vue": "^2.6.10",
     "vue-cropper": "^0.4.9",
     "vue-drag-resize": "^1.3.2",
-    "vue-router": "^3.0.7"
+    "vue-router": "^3.0.7",
+    "vuedraggable": "^2.23.2",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
