--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --host localhost  --open",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --modern",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -14,16 +14,13 @@
     "core-js": "^2.6.5",
     "element-ui": "^2.12",
     "js-cookie": "^2.2.1",
-    "node-sass": "^4.12.0",
     "nprogress": "^0.2.0",
-    "sass-loader": "^7.1.0",
     "svg-sprite-loader": "^4.1.6",
     "vue": "^2.6.10",
     "vue-cropper": "^0.4.9",
     "vue-drag-resize": "^1.3.2",
     "vue-router": "^3.0.7",
-    "vuedraggable": "^2.23.2",
-    "weixin-js-sdk": "^1.4.0-test"
+    "vuedraggable": "^2.23.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
@@ -32,6 +29,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "terser-webpack-plugin": "^2.3.1",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1"
