--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "countup.js": "^2.0.4",
     "element-ui": "^2.12",
     "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "svg-sprite-loader": "^4.1.6",
     "vue": "^2.6.10",
+    "vue-countup-v2": "^4.0.0",
     "vue-cropper": "^0.4.9",
     "vue-drag-resize": "^1.3.2",
     "vue-router": "^3.0.7",
